<resources>
    <string name="app_name">Calc</string>
    <string name="button7">7</string>
    <string name="button8">8</string>
    <string name="button9">9</string>
    <string name="div">/</string>
    <string name="button4">4</string>
    <string name="button5">5</string>
    <string name="button6">6</string>
    <string name="button1">1</string>
    <string name="button2">2</string>
    <string name="button3">3</string>
    <string name="puls">+</string>
    <string name="delete">del</string>
    <string name="button0">0</string>
    <string name="minus">-</string>
    <string name="equal">=</string>
    <string name="mul">*</string>
    <string name="point">.</string>
    <string name="ac">AC</string>
    <string name="duble0">00</string>

</resources>
