<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.calc.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="end">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:id="@+id/first_number_tv"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:id="@+id/operation_tv"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:id="@+id/second_number_tv"/>

    </LinearLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:stretchColumns="*">
        <TableRow
            android:layout_height="0dp"
            android:layout_weight="1">

        <Button
            android:layout_height="match_parent"
            android:layout_width="wrap_content"
            android:text="@string/button7"
            android:onClick="onClickNumber"/>

        <Button
            android:layout_height="match_parent"
            android:layout_width="wrap_content"
            android:text="@string/button8"
            android:onClick="onClickNumber"/>

        <Button
            android:layout_height="match_parent"
            android:layout_width="wrap_content"
            android:text="@string/button9"
            android:onClick="onClickNumber"/>

        <Button
            android:layout_height="match_parent"
            android:layout_width="wrap_content"
            android:id="@+id/div"
            android:text="@string/div"
            android:onClick="onClickOperation"/>
        </TableRow>


        <TableRow
            android:layout_height="0dp"
            android:layout_weight="1">

            <Button
                android:layout_height="match_parent"
                android:layout_width="wrap_content"
                android:text="@string/button4"
                android:onClick="onClickNumber"
                android:id="@+id/button" />

            <Button
            android:layout_height="match_parent"
            android:layout_width="wrap_content"
            android:text="@string/button5"
            android:onClick="onClickNumber"/>

        <Button
            android:layout_height="match_parent"
            android:layout_width="wrap_content"
            android:text="@string/button6"
            android:onClick="onClickNumber"/>

        <Button
            android:layout_height="match_parent"
            android:layout_width="wrap_content"
            android:id="@+id/mul"
            android:text="@string/mul"
            android:onClick="onClickOperation"/>
        </TableRow>

        <TableRow
            android:layout_height="0dp"
            android:layout_weight="1">

        <Button
            android:layout_height="match_parent"
            android:layout_width="wrap_content"
            android:text="@string/button1"
            android:onClick="onClickNumber"/>

        <Button
            android:layout_height="match_parent"
            android:layout_width="wrap_content"
            android:text="@string/button2"
            android:onClick="onClickNumber"/>

        <Button
            android:layout_height="match_parent"
            android:layout_width="wrap_content"
            android:text="@string/button3"
            android:onClick="onClickNumber"/>

        <Button
            android:layout_height="match_parent"
            android:layout_width="wrap_content"
            android:id="@+id/puls"
            android:text="@string/puls"
            android:onClick="onClickOperation"/>
        </TableRow>

        <TableRow
            android:layout_height="0dp"
            android:layout_weight="1">

        <Button
            android:layout_height="match_parent"
            android:layout_width="wrap_content"
            android:id="@+id/delete"
            android:text="@string/delete"
            android:onClick="onClickOperation"
            />

        <Button
            android:layout_height="match_parent"
            android:layout_width="wrap_content"
            android:text="@string/button0"
            android:onClick="onClickNumber"/>
        <Button
            android:layout_height="match_parent"
            android:layout_width="wrap_content"
            android:id="@+id/minus"
            android:text="@string/minus"
            android:onClick="onClickOperation"/>


        <Button
            android:layout_height="match_parent"
            android:layout_width="wrap_content"
            android:id="@+id/equal"
            android:text="@string/equal"
            android:onClick="onClickYaIndys"/>
        </TableRow>
    </TableLayout>
</LinearLayout>
